# sentimentdesk

./: .gitignore  AGENTS.md  README.md
backend/: Dockerfile  pyproject.toml
backend/app/: cache.py  main.py
backend/app/api/: routes.py
backend/app/config/: settings.py
backend/app/db/: models.py  session.py
backend/app/jobs/: __init__.py  provider_fetch.py  queue.py
backend/app/parsing/: markdown.py
backend/app/providers/: finnhub.py  selector.py  simfin.py
backend/app/schemas/: provider.py  report.py  stocks.py  watchlist.py
backend/app/scoring/: scoring.py
backend/app/validation/: validator.py
backend/db/migrations/: README.md
backend/sentimentdesk_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_parse_enqueues_provider_job.py  test_provider_cache.py  test_provider_cache_key.py  test_smoke_imports.py
docs/: SESSION_NOTES_BACKEND.md  SESSION_NOTES_FRONTEND.md
docs/decisions/: 001-trend-scope.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/lib/api/: index.ts
infra/: .env.example  docker-compose.yml
